# ARCI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
assets/: ARCI.inf
components/ADCHandler/: ADCHandler.cpp  CMakeLists.txt  README.md
components/ADCHandler/include/: ADCHandler.h
components/AntennaSwitch/: API_REFERENCE.md  AntennaSwitch.cpp  AntennaWebSocketClient.cpp  CMakeLists.txt  Kconfig  README.md  WEBSOCKET_INTEGRATION.md  idf_component.yml
components/AntennaSwitch/include/: AntennaSwitch.h  AntennaWebSocketClient.h
components/AntennaSwitch/test/: CMakeLists.txt  test_antenna_websocket.cpp
components/Audio/: AudioHandler.cpp  CMakeLists.txt  README.md  idf_component.yml
components/Audio/include/: AudioHandler.h
components/Button/: Button.cpp  CMakeLists.txt  README.md
components/Button/include/: Button.h
components/ButtonHandler/: ButtonHandler.cpp  CMakeLists.txt  MatrixButton.cpp  README.md
components/ButtonHandler/include/: ButtonHandler.h  MatrixButton.h
components/ButtonHandler/test/: CMakeLists.txt  test_button_handler.cpp
components/CatParser/: CMakeLists.txt  CatParser.cpp  ParserUtils.cpp  README.md
components/CatParser/include/: CatParser.h  ParserUtils.h  RadioCommand.h
components/CatParser/test/: CMakeLists.txt  test_cat_parser.cpp  test_cat_parser_utils.cpp
components/CommandHandlers/: BaseCommandHandler.cpp  CMakeLists.txt  README.md
components/CommandHandlers/antenna/: AntennaCommandHandler.cpp
components/CommandHandlers/audio/: AudioEqualizerCommandHandler.cpp  VoiceMessageCommandHandler.cpp
components/CommandHandlers/cw/: CwCommandHandler.cpp
components/CommandHandlers/frequency/: FrequencyVfoCommandHandler.cpp
components/CommandHandlers/gain/: GainLevelCommandHandler.cpp
components/CommandHandlers/include/: AntennaCommandHandler.h  AudioEqualizerCommandHandler.h  BaseCommandHandler.h  CwCommandHandler.h  ExtendedCommandHandler.h  FrequencyVfoCommandHandler.h  GainLevelCommandHandler.h  ICommandHandler.h  InterfaceSystemCommandHandler.h  MXCommandHandler.h  MemoryCommandHandler.h  MenuConfigCommandHandler.h  ModeCommandHandler.h  ReceiverProcessingCommandHandler.h  ScanCommandHandler.h  StatusInfoCommandHandler.h  ToneSquelchCommandHandler.h  TransmitterCommandHandler.h  UICommandHandler.h  VisualScanCommandHandler.h  VoiceMessageCommandHandler.h
components/CommandHandlers/interface/: InterfaceSystemCommandHandler.cpp
components/CommandHandlers/macro/: MXCommandHandler.cpp
components/CommandHandlers/memory/: MemoryCommandHandler.cpp
components/CommandHandlers/menu/: ExtendedCommandHandler.cpp  MenuConfigCommandHandler.cpp
components/CommandHandlers/mode/: ModeCommandHandler.cpp
components/CommandHandlers/receiver/: ReceiverProcessingCommandHandler.cpp
components/CommandHandlers/scan/: ScanCommandHandler.cpp  VisualScanCommandHandler.cpp
components/CommandHandlers/status/: StatusInfoCommandHandler.cpp
components/CommandHandlers/test/: CMakeLists.txt  test_consolidated_command_handlers.cpp  test_transverter_features.cpp
components/CommandHandlers/tone/: ToneSquelchCommandHandler.cpp
components/CommandHandlers/transmitter/: TransmitterCommandHandler.cpp
components/CommandHandlers/ui/: UICommandHandler.cpp
components/CommonConstants/: CMakeLists.txt  README.md  radio_constants.cpp
components/CommonConstants/include/: radio_constants.h  rtos_mutex.h
components/Diagnostics/: CMakeLists.txt  Diagnostics.cpp  README.md
components/EncoderHandler/: CMakeLists.txt  EncoderHandler.cpp  Kconfig  README.md
components/EncoderHandler/test/: CMakeLists.txt  test_encoder_handler.cpp
components/FrequencyFormatter/: CMakeLists.txt  README.md
components/ISerialChannel/: CMakeLists.txt  README.md
components/MacroStorage/: CMakeLists.txt  MacroStorage.cpp  README.md
components/MultiEncoderHandler/: CMakeLists.txt  MultiEncoderHandler.cpp  README.md
components/NvsManager/: CMakeLists.txt  Kconfig  NvsManager.cpp  README.md
components/PCF8575Handler/: CMakeLists.txt  PCF8575Handler.cpp  README.md
components/QuadratureDecoder/: CMakeLists.txt  README.md
components/RadioCore/: CATHandler.cpp  CMakeLists.txt  CommandDispatcher.cpp  ForwardingPolicy.cpp  Kconfig  README.md  RadioManager.cpp
components/RadioCore/include/: CATHandler.h  CommandDispatcher.h  DisplayLatencyProfiler.h  ForwardingPolicy.h  RadioManager.h
components/RadioCore/test/: CATTestUtils.cpp  CMakeLists.txt  TEST_STRUCTURE.md  test_cache.cpp  test_meter_polling_performance.cpp  test_radiocat_handler.cpp  test_radiomanager_cat_commands.cpp
components/RadioCore/test/include/: CATTestUtils.h
components/RadioMacroManager/: CMakeLists.txt  README.md  RadioMacroManager.cpp
components/RadioMacroManager/test/: CMakeLists.txt  test_radio_macro_manager.cpp
components/SerialHandler/: CMakeLists.txt  README.md  SerialHandler.cpp  idf_component.yml
components/SerialHandler/test/: CMakeLists.txt  test_serial_handler_queue.cpp
components/SimpleQuadratureEncoder/: CMakeLists.txt  README.md  SimpleQuadratureEncoder.cpp
components/StateManager/: CMakeLists.txt  README.md  RadioState.cpp
components/TCA8418Handler/: CMakeLists.txt  README.md  TCA8418Handler.cpp
components/TCA9548Handler/: CMakeLists.txt  README.md  TCA9548Handler.cpp
components/TcpCatBridge/: CMakeLists.txt  Kconfig  README.md  TcpCatBridge.cpp
components/UsbCdc/: CMakeLists.txt  CdcSerialHandler.cpp  README.md  UsbCdc.cpp  idf_component.yml
components/UsbCdc/include/: UsbCdc.h  (+1 more)
components/WiFiManager/: CMakeLists.txt  Kconfig  README.md  WiFiManager.cpp
components/WiFiManager/include/: WiFiManager.h
components/unit_test/: CMakeLists.txt  Kconfig  README.md  test_output_capture.cpp  tests_main.cpp
components/unit_test/include/: test_hooks.h  test_tracker.h  tests_main.h  unity_config.h
docs/: ARCHITECTURE.md
include/: pin_definitions.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
spec/: TS-590SG EX Command Parameter List.json  ts590sg_cat_commands_v3.json
tools/: README.md  validate_set_to_read_map.py
(+19 files in other folders)
